--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -754,9 +754,10 @@ section {
 --------------------------------------------------------------*/
 .counts {
   padding-bottom: 30px;
+  padding-top: 20px;
 }
 .counts .count-box {
-  box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: -5px 1px 40px 0 rgba(0, 0, 0, 0.1);
   padding: 30px;
   width: 100%;
 }
@@ -1634,4 +1635,41 @@ section {
   padding-top: 10px;
   text-align: center;
   font-size: 13px;
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?xu1z0t');
+  src:  url('fonts/icomoon.eot?xu1z0t#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?xu1z0t') format('truetype'),
+    url('fonts/icomoon.woff?xu1z0t') format('woff'),
+    url('fonts/icomoon.svg?xu1z0t#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-excavator:before {
+  content: "\e900";
+}
+.icon-generator:before {
+  content: "\e901";
+}
+.icon-truck:before {
+  content: "\e902";
 }
