resized the innovations video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1134,12 +1134,32 @@ section {
 
 .ff {
 
-  max-width: 350px;
+  /* max-width: 350px;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto; 
+  
+  position: absolute; 
+  right: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto; 
+  height: auto; 
+  z-index: -100;
+  background-size: cover;
+  overflow: hidden;
+  */
+
+  max-width: 100%;
+  height: auto;
+  display: block;
 
 
 }
+
+
+
+
 /*--------------------------------------------------------------
 # Doctors
 --------------------------------------------------------------*/
