--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,12 +81,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/*
+
 .vif {
   width: 100%;
   height: 100%;
 }
-*/
+
 
 
 /*--------------------------------------------------------------
@@ -1115,8 +1115,7 @@ section {
 
 
 
-.loggo {
-  
+.loggo {  
   position: absolute;
   top: 0;
   bottom: 0;
@@ -1124,12 +1123,9 @@ section {
 }
 
 .aa {
- 
     position: relative;
-    
-    height: 250px;
+    height: 200px;
     max-width: 200px;
-
 }
 
 .ff {
@@ -1153,8 +1149,11 @@ section {
   max-width: 100%;
   height: auto;
   display: block;
+}
 
+.hehe{
 
+  max-height: 100%;
 }
 
 
@@ -1259,7 +1258,7 @@ section {
 .sldie {
 
   height: 300px;
-  width: 500px;
+  width: 100%;
 }
 
 
