--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,11 +82,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+/*
 .vif {
   width: 100%;
   height: 100%;
 }
-
+*/
 
 
 /*--------------------------------------------------------------
