--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,11 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+.jj {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 
 /*---------------------
 
